<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/sfondo_blu"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/id_foto_menu"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/string_descrizione_icona"
        android:src="@mipmap/ic_launcher">
    </ImageView>

    <TextView
        android:id="@+id/id_nome_app_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/baloo"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/id_repo_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/link_repo"
        android:textColor="@color/white"
        android:textSize="12sp" />

</LinearLayout>