<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_drawer_sensors"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_sensors"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:itemIconTint="@color/Blu_scuro"
        app:itemTextColor="@color/Blu_scuro"
        app:menu="@menu/main_menu" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/id_toolbar_sensors"
                layout="@layout/toolbar_data"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/id_titolo_actsens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/baloo"
                android:padding="10dp"
                android:text="@string/string_titolo_schermata_data"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/id_toolbar_sensors" />

            <androidx.cardview.widget.CardView
                android:id="@+id/id_card_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/Trasparente"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/id_titolo_actsens">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:background="@color/Blu_card1">

                    <TextView
                        android:id="@+id/id_titolo_card1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/baloo"
                        android:padding="16dp"
                        android:text="@string/string_acc_valori"
                        android:textColor="@color/Grigio_dark"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/label_acc_x"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="60dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/string_acc_x"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/label_acc_y"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="85dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/string_acc_y"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/label_acc_z"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="110dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/string_acc_z"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/id_card_gyr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/Trasparente"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/id_card_acc">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:background="@color/Blu_card2">

                    <TextView
                        android:id="@+id/id_titolo_card2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/baloo"
                        android:padding="16dp"
                        android:text="@string/string_gyr_valori"
                        android:textColor="@color/Grigio_dark"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/label_gyr_x"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="60dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/string_gyr_x"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/label_gyr_y"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="85dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/string_gyr_y"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/label_gyr_z"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="110dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/string_gyr_z"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/id_card_linacc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="@color/Trasparente"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                app:layout_constraintBottom_toBottomOf="@id/constraint_data"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/id_card_gyr">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:background="@color/Blu_card3">

                    <TextView
                        android:id="@+id/id_titolo_card3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/baloo"
                        android:padding="16dp"
                        android:text="@string/string_acc_lin_valori"
                        android:textColor="@color/Grigio_dark"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/label_linacc_x"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="60dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/string_linacc_x"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/label_linacc_y"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="85dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/string_linacc_y"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/label_linacc_z"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="110dp"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/string_linacc_z"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>